--- a/Clase-8/Position/style.css
+++ b/Clase-8/Position/style.css
@@ -31,10 +31,28 @@
     z-index: 1;
 } */
 
-.padre .hijo:nth-child(2) {
+/* .padre .hijo:nth-child(2) {
     position: absolute;
     left: 200px;
     background-color: red;
     z-index: 1;
     top: 0;
+} */
+padre .hijo:nth-child(2) {
+    position: fixed;
+    left: 0px;
+    background-color: red;
+    width: 100vw;
+    z-index: 1;
+    top: 0px;
+}
+
+.wsp {
+    position: fixed;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    background-color: greenyellow;
+    bottom: 20px;
+    right: 20px;
 }
