clases restantes hasta 19

--- a/Clase-8/Tarea-clase8/style.css
+++ b/Clase-8/Tarea-clase8/style.css
@@ -12,7 +12,7 @@
 
 section .cards {
     display: flex;
-    width: 100vh;
+    width: 100%;
     justify-content: center;
 }
 
@@ -22,7 +22,7 @@ section .cards {
     width: 350px;
     flex-direction: column;
     border: 1px solid #673de646;
-    border-radius: 2px;
+    border-radius: 2%;
     overflow: hidden;
 }
 .card .card-info {
@@ -35,15 +35,38 @@ section .cards {
     position: relative;
     gap: 20px;
 }
+
 .card .card-info .info-stars i {
     color: #673de6;
     padding-left: 2px;
 }
+
+.card .card-info .review-text {
+    font-family: var(--ff-main);
+    font-size: 14px;
+    color: #2f1c6a;
+}
+
+.card .card-info .history-text {
+    position: absolute;
+    bottom: 40px;
+}
+
 .card .card-info .history-text a {
     font-family: var(--ff-main);
     font-weight: 700;
     color: #673de6;
     text-decoration: none;
+}
+
+.user-info {
+    height: 120px;
+    display: flex;
+    align-items: center;
+    padding: 0 30px;
+    border-top: 1px solid #673de646;
+    background-color: #f4f5ff;
+    gap: 10px;
 }
 
 .user-info .user-pic img {
@@ -56,6 +79,12 @@ section .cards {
     height: 55px;
 }
 .user-info .user-name h3 {
+    font-family: var(--ff-main);
+    font-size: 18px;
+    color: #2f1c6a;
+}
+
+.user-info .user-name span {
     font-family: var(--ff-main);
     font-weight: 250;
     font-size: 14px;
